Integration testing that only one file was generated